# python-agents-ia

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  RESSOURCES.md  TODO.md  config.py  pyproject.toml  test_connexion.py
01_fondations/: 01_types_variables.py  02_controle_flux.py  03_fonctions.py  04_erreurs.py  05_fichiers_json.py  06_modules.py  projet_chatbot.py
02_intermediaire/: 01_poo.py  02_decorateurs.py  03_generateurs.py  04_context_managers.py  05_async_await.py  06_type_hints.py  projet_async_client.py
03_ecosysteme_ia/: 01_pydantic.py  02_httpx.py  03_loguru.py  04_rich.py  05_typer.py  projet_setup_demo.py
04_llm_apis/: 01_messages_api.py  02_streaming.py  03_tool_use.py  04_structured_output.py  05_prompt_engineering.py  projet_agent_complet.py
05_agent_architecture/: 01_tool_registry.py  02_memory.py  03_react_loop.py  04_planification.py  projet_agent_react.py
06_frameworks/: 01_langchain.py  02_langgraph.py  03_crewai.py  projet_agent_recherche.py
07_production/: 01_fastapi.py  02_tests.py  03_rag.py  04_mcp_server.py  projet_api_complete.py
