[project]
name = "pro"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.103.0",
    "chromadb>=0.6.0",
    "crewai",
    "fastapi",
    "httpx>=0.28.1",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "loguru>=0.7.3",
    "mcp>=1.0.0",
    "openai>=2.37.0",
    "pydantic>=2.13.4",
    "pytest",
    "pytest-asyncio",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typer>=0.25.1",
    "uvicorn",
]
